fix(tabs): fix close button getting cut off

--- a/parfait/components/tabbar.css
+++ b/parfait/components/tabbar.css
@@ -174,6 +174,10 @@ spacer:is([part="overflow-start-indicator"], [part="overflow-end-indicator"]) {
       scale: 0.985;
     }
   }
+  #tabbrowser-tabs[orient="vertical"]:not([expanded]) & .tab-close-button {
+    top: 1px !important;
+    left: 7px !important;
+  }
   &:not(:hover) .tab-close-button {
     display: none !important;
   }
